[package]
name = "snake"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ncurses = "5"
rand = "0.8"

# examples dependencies
crossterm = { version = "0.25", features = ["event-stream"] }
futures = "0.3"
tokio = { version = "1.21", features = ["full"] }
tui = "0.19"
futures-util = "0.3"
rustyline-async = "0.2"